--- a/app/src/main/res/layout/title_fragment.xml
+++ b/app/src/main/res/layout/title_fragment.xml
@@ -59,18 +59,19 @@
             app:layout_constraintTop_toBottomOf="@+id/get_ready_text"
             app:layout_constraintVertical_chainStyle="packed" />
 
-        <Button
-            android:id="@+id/play_game_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:background="@drawable/magenta_rounded_corners"
-            android:text="@string/play_button"
-            android:theme="@style/GoButton"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_text" />
+            app:layout_constraintTop_toBottomOf="@+id/title_text"
+            app:srcCompat="@drawable/play_button_super_duper_muper_clicky" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
