--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -18,6 +18,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="gameViewModel"
+            type="com.example.android.guesstheword.screens.game.GameViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/game_layout"
         android:layout_width="match_parent"
@@ -53,6 +59,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@color/black_text_color"
             android:textSize="34sp"
+            android:text="@{@string/quote_format(gameViewModel.word)}"
             android:textStyle="normal"
             app:layout_constraintBottom_toTopOf="@+id/score_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,6 +95,7 @@
             android:textColor="@color/grey_text_color"
             android:textSize="14sp"
             android:textStyle="normal"
+            android:text="@{@string/score_format(gameViewModel.score)}"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -101,6 +109,7 @@
             android:background="@drawable/red_rounded_corners"
             android:fontFamily="@font/jetbrainsfontio"
             android:text="@string/wrong"
+            android:onClick="@{() -> gameViewModel.onSkip()}"
             android:textColor="#000000"
             android:theme="@style/SkipButton"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -124,6 +133,7 @@
             android:background="@drawable/green_rounded_corners"
             android:fontFamily="@font/jetbrainsfontio"
             android:text="@string/correct"
+            android:onClick="@{() -> gameViewModel.onCorrect()}"
             android:textColor="#000000"
             android:theme="@style/GoButton"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -139,6 +149,7 @@
             android:background="@drawable/blue_rounded_corners"
             android:fontFamily="@font/jetbrainsfontio"
             android:text="@string/end_game"
+            android:onClick="@{() -> gameViewModel.onGameFinish()}"
             android:textColor="#000000"
             android:theme="@style/EndGameButton"
             app:layout_constraintBottom_toBottomOf="parent"
