--- a/app/src/main/res/drawable/blue_rounded_corners.xml
+++ b/app/src/main/res/drawable/blue_rounded_corners.xml
@@ -4,14 +4,14 @@
         <shape>
             <corners android:radius="100dp" />
             <solid android:color="@color/grey" />
-            <gradient android:angle="90" android:endColor="@color/dark_light_blue" android:centerColor="@color/light_blue" android:startColor="@color/white_text_color"/>
+            <gradient android:angle="90" android:endColor="@color/dark_blue" android:startColor="@color/white_text_color" android:centerColor="@color/dark_light_blue"/>
         </shape>
     </item>
     <item android:state_pressed="false">
         <shape>
             <corners android:radius="100dp" />
             <solid android:color="@color/blue_button_color" />
-            <gradient android:angle="90" android:startColor="@color/dark_light_blue" android:centerColor="@color/light_blue" android:endColor="@color/white_text_color"/>
+            <gradient android:angle="90" android:startColor="@color/dark_blue" android:endColor="@color/white_text_color" android:centerColor="@color/dark_light_blue"/>
         </shape>
     </item>
 </selector>
