--- a/app/src/main/res/drawable/green_rounded_corners.xml
+++ b/app/src/main/res/drawable/green_rounded_corners.xml
@@ -4,14 +4,14 @@
         <shape>
             <corners android:radius="100dp" />
             <solid android:color="@color/grey" />
-            <gradient android:angle="90" android:endColor="@color/dark_light_green" android:startColor="@color/white_text_color" android:centerColor="@color/light_green"/>
+            <gradient android:angle="90" android:endColor="@color/dark_green" android:startColor="@color/white_text_color" android:centerColor="@color/dark_light_green"/>
         </shape>
     </item>
     <item android:state_pressed="false">
         <shape>
             <corners android:radius="100dp" />
             <solid android:color="@color/ok_green_color" />
-            <gradient android:angle="90" android:startColor="@color/dark_light_green" android:endColor="@color/white_text_color" android:centerColor="@color/light_green"/>
+            <gradient android:angle="90" android:startColor="@color/dark_green" android:endColor="@color/white_text_color" android:centerColor="@color/dark_light_green"/>
         </shape>
     </item>
 </selector>
