--- a/app/src/main/res/drawable/red_rounded_corners.xml
+++ b/app/src/main/res/drawable/red_rounded_corners.xml
@@ -4,14 +4,14 @@
         <shape>
             <corners android:radius="100dp" />
             <solid android:color="@color/white_text_color" />
-            <gradient android:angle="90" android:endColor="@color/dark_red" android:startColor="@color/white_text_color" android:centerColor="@color/skip_red_color"/>
+            <gradient android:angle="90" android:endColor="@color/dark_red" android:startColor="@color/white_text_color" android:centerColor="@color/light_red"/>
         </shape>
     </item>
     <item android:state_pressed="false">
         <shape>
             <corners android:radius="100dp" />
             <solid android:color="@color/white_text_color" />
-            <gradient android:angle="90" android:startColor="@color/dark_red" android:endColor="@color/white_text_color" android:centerColor="@color/skip_red_color"/>
+            <gradient android:angle="90" android:startColor="@color/dark_red" android:endColor="@color/white_text_color" android:centerColor="@color/light_red"/>
         </shape>
     </item>
 </selector>
