--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,20 +27,25 @@
     <color name="grey_text_color">#99000000</color>
     <color name="grey_button_color">#606060</color>
     <color name="white_text_color">#ffffff</color>
+    <color name="light_red">#ff5555</color>
     <color name="red">#ff0000</color>
     <color name="dark_red">#dd0000</color>
     <color name="orange">#ff6700</color>
     <color name="dark_orange">#dd4500</color>
     <color name="yellow">#ffde00</color>
     <color name="dark_yellow">#ddbc00</color>
-    <color name="light_green">#00dd00</color>
-    <color name="dark_light_green">#00bb00</color>
-    <color name="green">#007700</color>
-    <color name="dark_green">#005500</color>
-    <color name="light_blue">#00baff</color>
-    <color name="dark_light_blue">#00a0dd</color>
-    <color name="blue">#0000ff</color>
-    <color name="dark_blue">#0000dd</color>
+    <color name="light_green">#55ee55</color>
+    <color name="dark_light_green">#77dd77</color>
+    <color name="green">#00dd00</color>
+    <color name="dark_green">#00bb00</color>
+    <color name="dark_dark_green">#007700</color>
+    <color name="dark_dark_dark_green">#005500</color>
+    <color name="light_blue">#00edff</color>
+    <color name="dark_light_blue">#00dcff</color>
+    <color name="blue">#00baff</color>
+    <color name="dark_blue">#00a0dd</color>
+    <color name="dark_dark_blue">#0000ff</color>
+    <color name="dark_dark_dark_blue">#0000dd</color>
     <color name="light_purple">#bb67ff</color>
     <color name="dark_light_purple">#aa45dd</color>
     <color name="purple">#bb00dd</color>
