--- a/app/src/main/res/drawable/green_rounded_corners.xml
+++ b/app/src/main/res/drawable/green_rounded_corners.xml
@@ -10,7 +10,7 @@
     <item android:state_pressed="false">
         <shape>
             <corners android:radius="100dp" />
-            <solid android:color="@color/ok_green_color" />
+            <solid android:color="@color/green" />
             <gradient android:angle="90" android:startColor="@color/dark_green" android:endColor="@color/white_text_color" android:centerColor="@color/dark_light_green"/>
         </shape>
     </item>
